Changed the title

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 
-
 <body>
     
-
 <section>
 
     <div class="first-container">
@@ -29,7 +27,7 @@
       
         <button id="generate-btn" onclick="generate()">
 
-                Generate passwords
+                Generate password
         </button>
         <hr style=" border: none; background-color: #273549; height: 1px;">
     </div>
